demo.junit.helloworld

--- a/jsoup.helloworld/.settings/org.eclipse.wst.common.component
+++ b/jsoup.helloworld/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="demo.hibernate.spring.helloworld">
+    <wb-module deploy-name="demo.jsoup.helloworld">
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/demo.hibernate.spring.helloworld/WebRoot/WEB-INF/classes"/>
-        <property name="context-root" value="demo.hibernate.spring.helloworld"/>
+        <property name="context-root" value="/"/>
+        <property name="java-output-path" value="/demo.jsoup.helloworld/WebRoot/WEB-INF/classes"/>
     </wb-module>
 </project-modules>
